[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/HUD/checkpoint/checkpoint_border.png" type="Texture" id=1]
[ext_resource path="res://assets/HUD/checkpoint/status_button_hover.png" type="Texture" id=2]
[ext_resource path="res://assets/HUD/checkpoint/skills_button.png" type="Texture" id=3]
[ext_resource path="res://assets/HUD/checkpoint/artefacts_button.png" type="Texture" id=4]
[ext_resource path="res://assets/HUD/checkpoint/collection_button.png" type="Texture" id=5]
[ext_resource path="res://assets/HUD/checkpoint/leave_button.png" type="Texture" id=6]
[ext_resource path="res://assets/HUD/checkpoint/skills_button_hover.png" type="Texture" id=7]
[ext_resource path="res://assets/HUD/checkpoint/artefacts_button_hover.png" type="Texture" id=8]
[ext_resource path="res://assets/HUD/checkpoint/collection_button_hover.png" type="Texture" id=9]
[ext_resource path="res://assets/HUD/checkpoint/leave_button_hover.png" type="Texture" id=10]
[ext_resource path="res://assets/HUD/checkpoint/status_button.png" type="Texture" id=11]
[ext_resource path="res://HUD/CheckpointMenu/CheckpointMenu.gd" type="Script" id=12]

[node name="CheckpointMenu" type="CanvasLayer"]
visible = false
script = ExtResource( 12 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 4.0
margin_right = 172.0
margin_bottom = 318.0
custom_constants/separation = 28
alignment = 1

[node name="StatusButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 35.0
margin_right = 168.0
margin_bottom = 62.0
texture_normal = ExtResource( 11 )
texture_hover = ExtResource( 2 )

[node name="SkillsButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 90.0
margin_right = 168.0
margin_bottom = 117.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 7 )

[node name="ArtefactsButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 145.0
margin_right = 168.0
margin_bottom = 172.0
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 8 )

[node name="CollectionButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 200.0
margin_right = 168.0
margin_bottom = 227.0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 9 )

[node name="LeaveButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 255.0
margin_right = 168.0
margin_bottom = 282.0
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 10 )

[connection signal="pressed" from="VBoxContainer/StatusButton" to="." method="_on_StatusButton_pressed"]
[connection signal="pressed" from="VBoxContainer/SkillsButton" to="." method="_on_SkillsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ArtefactsButton" to="." method="_on_ArtefactsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/LeaveButton" to="." method="_on_LeaveButton_pressed"]
